Add client-side with tests

--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>client</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <title>Code Development Test</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      @import 'src/assets/style/main.css';
+    </style>
+
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="container">
+      <header>
+        Code Development Project
+      </header>
+      <div id="app"></div>
+      <footer>
+        <a href="#">Download PDF Instructions</a>
+      </footer>
+    </div>
+
+    <script src="/dist/build.js"></script>
   </body>
 </html>
